[bdist_wheel]
universal = 1

[yapf]
based_on_style = google
column_limit = 120
indent_width = 4

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[flake8]
exclude = .git, __pycache__, build, dist

[metadata]
name = beam-pyodbc-connector
version = attr: beam_pyodbc.__version__
description = pyodbc I/O Connector for Apache Beam
long_description = file: README.md
long_description_content_type = text/markdown
author = Kesav Kolla
author_email = kesav@314ecorp.com
keywords = apache beam odbc connector
license = MIT
license_file = LICENSE
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:
install_requires =
	apache-beam>=2.20.*
	pyodbc
